<resources>
    <string name="app_name">SmartPlat</string>
    <string name="open">Open</string>
    <string name="close">Close</string>
    <string name="register">REGISTER</string>
    <string name="sign_up">SIGN UP</string>
    <string name="sign_up_smallcap">Sign Up</string>
    <string name="sign_in">SIGN IN</string>
    <string name="login">LOGIN</string>
    <string name="fontsan">sans-serif-smallcaps</string>
    <string name="us">USERNAME</string>
    <string name="pw">PASSWORD</string>
    <string name="em">EMAIL</string>
    <string name="name">NAME</string>
    <string name="address">ADDRESS</string>
    <string name="phone">PHONE</string>
    <string name="desc">No Joke. Just the Charming Place to be</string>
</resources>
