<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RegisterActivity"
    android:background="@drawable/background">

    <TextView
        android:id="@+id/textVIew"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_marginStart="85dp"
        android:layout_marginLeft="85dp"
        android:layout_marginTop="75dp"
        android:layout_marginEnd="84dp"
        android:layout_marginRight="84dp"
        android:background="#00000000"
        android:ems="10"
        android:fontFamily="@string/fontsan"
        android:inputType="textPersonName"
        android:text="@string/sign_in"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="45dp" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textVIew"
        android:layout_marginTop="3dp"
        android:background="#00000000"
        android:ems="10"
        android:text="@string/desc"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="15dp" />


    <TextView
        android:id="@+id/textView"
        android:layout_width="91dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView2"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_marginStart="136dp"
        android:layout_marginLeft="136dp"
        android:layout_marginTop="90dp"
        android:layout_marginEnd="133dp"
        android:layout_marginRight="133dp"
        android:text="@string/us"
        android:textAlignment="center"
        android:textColor="@color/white" />

    <EditText
        android:id="@+id/editTextUsername"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_marginStart="85dp"
        android:layout_marginLeft="85dp"
        android:layout_marginTop="14dp"
        android:layout_marginEnd="84dp"
        android:layout_marginRight="84dp"
        android:drawableLeft="@drawable/ic_person_white_24dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:textColor="@color/white" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/editTextUsername"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_marginStart="125dp"
        android:layout_marginLeft="125dp"
        android:layout_marginTop="13dp"
        android:layout_marginEnd="126dp"
        android:layout_marginRight="126dp"
        android:text="@string/pw"
        android:textAlignment="center"
        android:textColor="@color/white" />

    <EditText
        android:id="@+id/editTextPassword"
        android:layout_width="241dp"
        android:layout_height="48dp"
        android:layout_above="@+id/Register"
        android:layout_below="@+id/textView4"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_marginStart="83dp"
        android:layout_marginLeft="83dp"
        android:layout_marginTop="3dp"
        android:layout_marginEnd="86dp"
        android:layout_marginRight="86dp"
        android:layout_marginBottom="85dp"
        android:drawableLeft="@drawable/ic_lock_white_24dp"
        android:ems="10"
        android:inputType="textPassword"
        android:textColor="@color/white" />

    <Button
        android:id="@+id/Register"
        android:layout_width="178dp"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="102dp"
        android:layout_marginLeft="102dp"
        android:layout_marginEnd="103dp"
        android:layout_marginRight="103dp"
        android:layout_marginBottom="106dp"
        android:alpha="0.8"
        android:background="@color/colorAccent"
        android:fontFamily="@string/fontsan"
        android:text="@string/login"
        android:textColor="@color/white"
        android:textSize="20dp" />

    <Button
        android:id="@+id/SignUp"
        android:layout_width="178dp"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="102dp"
        android:layout_marginLeft="102dp"
        android:layout_marginEnd="103dp"
        android:layout_marginRight="103dp"
        android:layout_marginBottom="36dp"
        android:alpha="0.8"
        android:background="@color/colorAccent"
        android:fontFamily="@string/fontsan"
        android:text="@string/sign_up"
        android:textColor="@color/white"
        android:textSize="20dp" />


</RelativeLayout>